텍스트 수정

--- a/blog/[20250923]_[TIL Sampling Distribution and Hypothesis Testing]_[python]_[데분코4 썸네일.jpg]_[데이터분석과코딩 리뷰]_[].ipynb
+++ b/blog/[20250923]_[TIL Sampling Distribution and Hypothesis Testing]_[python]_[데분코4 썸네일.jpg]_[데이터분석과코딩 리뷰]_[].ipynb
@@ -2,16 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zZ0vQN1jEqx6"
+      },
       "source": [
-        "##Sampling Distribution ##\n",
-        "\n",
+        "## Sampling Distribution \n",
         "만약, 단순무작위추출을 실험으로 생각한다면, 표본평균은 실험의 결과로 나온 수치 즉, 확률변수이다.\n",
         "\n",
         "(확률변수 정의: 실험의 결과를 수치적으로 정의한 것)\n",
         "\n",
-        "x바가 확률변수라는게 성립하면? - 다른 확률변수들처럼 표본평균도 평균(기댓값) 표준편차, 확률분포를 가진다!!\n",
+        "𝒙̅가 확률변수라는게 성립하면? - 다른 확률변수들처럼 표본평균도 평균(기댓값) 표준편차, 확률분포를 가진다!!\n",
         "\n",
-        "the expected value of x바\n",
+        "the expected value of 𝒙̅\n",
         "average of average.\n",
         "mean of all possible mean\n",
         "\n",
@@ -19,9 +21,9 @@
         "\n",
         "E(X) = 모집단 평균\n",
         "E(x) = 표본 평균\n",
-        "E(x바) = 모집단 평균\n",
+        "E(𝒙̅) = 모집단 평균\n",
         "\n",
-        "#### Standard deviation of x바\n",
+        "#### Standard deviation of 𝒙̅\n",
         "\n",
         "샘플 하나 안에서는 n이 많아질수록 분산도가 커진다. (5명의 아이큐 분산과 500명 아이큐 분산 중 500명일 때가 더 분산이 크다.)\n",
         "\n",
@@ -45,15 +47,15 @@
         "(*표준오차는 between each sample의 표준편차이다,\n",
         "\n",
         "그러므로 사례수가 커질수록variability는 작아질 것이다.*)"
-      ],
-      "metadata": {
-        "id": "zZ0vQN1jEqx6"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Beh_d1vzFT1M"
+      },
       "source": [
-        "##Relationship between sample size and the sampling distribution of 𝒙̅.\n",
+        "## Relationship between sample size and the sampling distribution of 𝒙̅.\n",
         "\n",
         "**Interval Estimation**\n",
         "\n",
@@ -75,64 +77,66 @@
         "    표본으로 계산된 점추정치(𝑥̄)가 모집단의 진짜 값(μ)에 얼마나 가까운지를 보여주는 ‘범위’ 입니다.\n",
         "\n",
         "결론: 신뢰구간은 점추정치가 모집단 평균에 얼마나 가까운지를 범위로 표현하는 것이다.(아~ 내 점 추정치가 모수와 다를 것이라는거 나도 알아, 그러니까 내가 구간을 줄게. 이 구간의 하한과 상한 정도 거리 안에서 내 점 추정치와 모수는 가까워! 그리고 나는 이걸 신뢰수준만큼 확신해!!)"
-      ],
-      "metadata": {
-        "id": "Beh_d1vzFT1M"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yxfdLKV-_qeb"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# confidence interval based on z-distribution"
-      ],
       "metadata": {
         "id": "1nEiUdFAU40X"
-      }
+      },
+      "source": [
+        "# confidence interval based on z-distribution"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Rl3e7TffW-JY"
+      },
+      "outputs": [],
       "source": [
         "# load necessary packages\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from scipy.stats import norm"
-      ],
-      "metadata": {
-        "id": "Rl3e7TffW-JY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sFFbgr0ydy6H"
+      },
+      "outputs": [],
       "source": [
         "# loading CSV file stored in google drive\n",
         "# your own file path should be defined--i.e., where your file is stored in google drive\n",
         "file_path='/content/drive/MyDrive/data analysis and coding/lotte.csv'\n",
         "# save data as data\n",
         "data=pd.read_csv(file_path)"
-      ],
-      "metadata": {
-        "id": "sFFbgr0ydy6H"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IKlalULKd0oI"
+      },
+      "outputs": [],
       "source": [
         "# Extract the data\n",
         "amtspent = data['amtspent']\n",
@@ -176,54 +180,54 @@
         "plt.ylabel('Probability Density')\n",
         "plt.legend(loc='upper right', fontsize='small')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "IKlalULKd0oI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# confidence interval based on t-distribution"
-      ],
       "metadata": {
         "id": "V4TfjMWkdvXy"
-      }
+      },
+      "source": [
+        "# confidence interval based on t-distribution"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-uhvpfXmZshQ"
+      },
+      "outputs": [],
       "source": [
         "# load necessary packages\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from scipy.stats import t"
-      ],
-      "metadata": {
-        "id": "-uhvpfXmZshQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "suANTxbZeouY"
+      },
+      "outputs": [],
       "source": [
         "# loading CSV file stored in google drive\n",
         "# your own file path should be defined--i.e., where your file is stored in google drive\n",
         "file_path = '/content/drive/MyDrive/data analysis and coding/cbalance.csv'\n",
         "# save data as df\n",
         "df = pd.read_csv(file_path)"
-      ],
-      "metadata": {
-        "id": "suANTxbZeouY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KgntN7pDczc4"
+      },
+      "outputs": [],
       "source": [
         "# Extract the newbalance column\n",
         "newbalance = df['newbalance']\n",
@@ -266,15 +270,13 @@
         "plt.ylabel('Probability Density')\n",
         "plt.legend(loc='upper right', fontsize='small')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "KgntN7pDczc4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "H9YYmIiuF8sP"
+      },
       "source": [
         "- 모집단 평균을 모르지만\n",
         "뮤를 특정 값을 주고\n",
@@ -283,13 +285,13 @@
         "- 우리는 영향의 크기를\n",
         "모른다. 하지만, 영향이 없다\n",
         "는 알 수 있다(특정 값으로)\n"
-      ],
-      "metadata": {
-        "id": "H9YYmIiuF8sP"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wFWi6yh5GHkF"
+      },
       "source": [
         "##Hypothesis Testing\n",
         "\n",
@@ -305,24 +307,26 @@
         "뮤0는 참일 수 있다는 것.\n",
         "(즉, 우리가 관심 있는 것은 정규분포에서\n",
         "뮤0와 우리의 표본값이 how far?)"
-      ],
-      "metadata": {
-        "id": "wFWi6yh5GHkF"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2FmurkMFgn8m"
+      },
       "source": [
         "# z test\n",
         "\n",
         "Population Mean: 𝝈 is known"
-      ],
-      "metadata": {
-        "id": "2FmurkMFgn8m"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lN27YVOqlQQj"
+      },
+      "outputs": [],
       "source": [
         "# Load packages\n",
         "import pandas as pd\n",
@@ -346,29 +350,29 @@
         "# Calculate the 95% confidence interval\n",
         "ci_lower = sample_mean - 1.96 * (population_std / np.sqrt(n))\n",
         "ci_upper = sample_mean + 1.96 * (population_std / np.sqrt(n))"
-      ],
-      "metadata": {
-        "id": "lN27YVOqlQQj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4x0KYuJ7Fz1b"
+      },
+      "outputs": [],
       "source": [
         "# Print the results\n",
         "print(z_score)\n",
         "print(p_value, '\\n')\n",
         "print(ci_lower, ci_upper)"
-      ],
-      "metadata": {
-        "id": "4x0KYuJ7Fz1b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2hg6rSPJF08j"
+      },
+      "outputs": [],
       "source": [
         "# Decision based on significance level of 0.05\n",
         "alpha = 0.05\n",
@@ -376,26 +380,26 @@
         "    print(\"Reject the null hypothesis: The population mean is significantly different from 295.\")\n",
         "else:\n",
         "    print(\"Fail to reject the null hypothesis: There is no significant difference from the population mean of 295.\")"
-      ],
-      "metadata": {
-        "id": "2hg6rSPJF08j"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "RD7n9NEXgq3Y"
+      },
       "source": [
         "# t test\n",
         "\n",
         "Population Mean: 𝝈 is unknown"
-      ],
-      "metadata": {
-        "id": "RD7n9NEXgq3Y"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ONPEMyO_Mp0f"
+      },
+      "outputs": [],
       "source": [
         "# Load packages\n",
         "import pandas as pd\n",
@@ -414,29 +418,29 @@
         "t_stat, p_value= stats.ttest_1samp(units, population_mean)\n",
         "# Compute 95% confidence interval\n",
         "confidence_interval = sms.DescrStatsW(units).tconfint_mean()"
-      ],
-      "metadata": {
-        "id": "ONPEMyO_Mp0f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dSmhHSUtL71X"
+      },
+      "outputs": [],
       "source": [
         "# Print the results\n",
         "print(t_stat)\n",
         "print(p_value, '\\n')\n",
         "print(confidence_interval)"
-      ],
-      "metadata": {
-        "id": "dSmhHSUtL71X"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1BO8ktAPMTew"
+      },
+      "outputs": [],
       "source": [
         "# Decision based on significance level of 0.05\n",
         "alpha = 0.05\n",
@@ -444,24 +448,24 @@
         "    print(\"Reject the null hypothesis: The population mean is significantly different from 40.\")\n",
         "else:\n",
         "    print(\"Fail to reject the null hypothesis: There is no significant difference from the population mean of 40.\")"
-      ],
-      "metadata": {
-        "id": "1BO8ktAPMTew"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IS6U_Itiw7xc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "private_outputs": true,
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -478,12 +482,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.5"
-    },
-    "colab": {
-      "private_outputs": true,
-      "provenance": []
-    },
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
