--- a/blog/[20251118]_[TIL Web Crawling(BeautifulSoup , requests)]_[Web Crawling]_[웹크롤링썸네일.jpg]_[코딩과논리적사고 리뷰]_[].ipynb
+++ b/blog/[20251118]_[TIL Web Crawling(BeautifulSoup , requests)]_[Web Crawling]_[웹크롤링썸네일.jpg]_[코딩과논리적사고 리뷰]_[].ipynb
@@ -219,23 +219,24 @@
         "\n",
         "# ✔️ 기본 크롤링 절차\n",
         "\n",
-        "1️⃣ 원하는 데이터의 HTML 태그(tag) + 클래스/아이디(class/id) 확인\n",
+        "1. 원하는 데이터의 HTML 태그(tag) + 클래스/아이디(class/id) 확인\n",
         "\n",
         "✔  크롬의 Elements 탭활용해서 원하는 데이터의 tag(태그)와 클래스(class) 확인:\n",
-        "* 예) <a class='gd_name': href=\"/Product/Goods/153064968\" onclick=\"wiseLogV2('BS', '001_005_001', ''); \">트렌드 코리아 2026</a>'\n",
-        "* 태그는 a, 클래스이름은 gd_name(참고로 a태그는 하이퍼링크를 만드는 태그임)\n",
+        "예) <a class='gd_name': href=\"/Product/Goods/153064968\" onclick=\"wiseLogV2('BS', '001_005_001', ''); \">트렌드 코리아 2026</a>'\n",
         "\n",
-        "2️⃣ BeautifulSoup로 해당 요소(태그를 모두 선택해서 리스트로 구성\n",
+        "태그는 a, 클래스이름은 gd_name(참고로 a태그는 하이퍼링크를 만드는 태그임)\n",
+        "\n",
+        "2️. BeautifulSoup로 해당 요소(태그를 모두 선택해서 리스트로 구성\n",
         "\n",
         "✔  find_all() 이용 * find_all()은 조건에 맞는 모든 태그를 찾아 리스트로 반환하는 함수이다.\n",
         "\n",
-        "* 예) titles = soup.find_all('a', class_='gd_name')\n",
+        "- 예) titles = soup.find_all('a', class_='gd_name')\n",
         "\n",
-        "3️⃣ 리스트의 각 요소의 텍스트 또는 속성값을 차례대로 추출\n",
+        "3️. 리스트의 각 요소의 텍스트 또는 속성값을 차례대로 추출\n",
         "\n",
         "✔  for문과 요소객체.text 이용\n",
-        "* for titie in titles:\n",
-        "*    print(title.text.strip()) #참고로 strip()는 앞뒤 공백 제거 코드임\n",
+        "- for titie in titles:\n",
+        "-    print(title.text.strip()) #참고로 strip()는 앞뒤 공백 제거 코드임\n",
         "\n",
         "✔️ 크롤링을 위한 핵심 문장\n",
         "\n",
