--- a/blog/[20250615]_[스튜어트 홀의 기호담론으로 읽는 버추얼 아이돌 플레이브_버츄얼 아이돌의 담론과 수용과정]_[project]_[플레이브1.jpg]_[영상커뮤니케이션]_[].md
+++ b/blog/[20250615]_[스튜어트 홀의 기호담론으로 읽는 버추얼 아이돌 플레이브_버츄얼 아이돌의 담론과 수용과정]_[project]_[플레이브1.jpg]_[영상커뮤니케이션]_[].md
@@ -108,7 +108,7 @@
 
 ## 3. 스튜어트 홀: 기호화와 메시지 구성 조건
 
-
+```text
 [기획사 · 기술 · 산업]
         │
         │  (기호화 Encoding)
@@ -174,7 +174,7 @@
 
 ## 4. 푸코: 규율권력과 ‘이상적 아이돌’
 
-
+```text
 [아이돌 산업의 규범]
 - 논란 없어야 함
 - 항상 단정·윤리적
@@ -222,7 +222,7 @@
 
 ## 5. 보드리야르: 시뮬라르크로서의 플레이브
 
-
+```text
 [현실 아이돌 (원본)]
         │
         │  복제 / 모델링
@@ -293,7 +293,7 @@
 
 ## 7. 호네트: 팬덤 갈등과 인정투쟁
 
-
+```text
 [기존 K-pop 팬덤]
 - "플레이브는 아이돌이 아니다"
 - "2D / 오타쿠 문화"
