--- a/blog/[20250615]_[스튜어트 홀의 기호담론으로 읽는 버추얼 아이돌 플레이브_버츄얼 아이돌의 담론과 수용과정]_[project]_[플레이브1.jpg]_[영상커뮤니케이션]_[].md
+++ b/blog/[20250615]_[스튜어트 홀의 기호담론으로 읽는 버추얼 아이돌 플레이브_버츄얼 아이돌의 담론과 수용과정]_[project]_[플레이브1.jpg]_[영상커뮤니케이션]_[].md
@@ -124,7 +124,8 @@
 - 지배적 수용
 - 협상적 수용
 - 대항적 수용
-```
+
+```markdown
 
 
 스튜어트 홀은 의미가 단순히 전달되는 것이 아니라,  
@@ -175,6 +176,7 @@
 
 ## 4. 푸코: 규율권력과 ‘이상적 아이돌’
 
+```text
 [아이돌 산업의 규범]
 - 논란 없어야 함
 - 항상 단정·윤리적
@@ -193,7 +195,8 @@
 - 감정·사생활 제거
 - 완전 통제 가능
 - 규율의 기술적 완성
-```
+
+```markdown
 
 
 미셸 푸코의 **규율권력** 개념은  
@@ -223,6 +226,7 @@
 
 ## 5. 보드리야르: 시뮬라르크로서의 플레이브
 
+```text
 [현실 아이돌 (원본)]
         │
         │  복제 / 모델링
@@ -236,7 +240,8 @@
 [시뮬라르크 상태]
 - 가짜지만 더 진짜처럼 인식
 - 원본보다 이상적
-```
+
+```markdown
 
 
 장 보드리야르의 **시뮬라르크** 개념은  
@@ -294,6 +299,7 @@
 
 ## 7. 호네트: 팬덤 갈등과 인정투쟁
 
+```text
 [기존 K-pop 팬덤]
 - "플레이브는 아이돌이 아니다"
 - "2D / 오타쿠 문화"
@@ -309,7 +315,8 @@
 [인정 요구]
 - "우리는 아이돌 팬이다"
 - "플레이브는 아이돌이다"
-```
+
+```markdown
 
 ![영상컴](img/플레이브9.jpg)
 
@@ -347,4 +354,5 @@
         ↓
 [호네트]
 인정받지 못하면 투쟁이 발생한다
-```
+
+```markdown
