텍스트 업로드

--- a/blog/[20260119]_[TIL Data Analysis]_[python]_[파이썬복습.jpg]_[python]_[] copy.ipynb
+++ b/blog/[20260119]_[TIL Data Analysis]_[python]_[파이썬복습.jpg]_[python]_[] copy.ipynb
@@ -1,5 +1,134 @@
 {
-  "cells": [],
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Data Analysis 입문\n",
+        "\n",
+        "데이터 분석을 배울 때 알아야 하는 프로세스 \n",
+        "- 데이터 추출(SQL)\n",
+        "- **전처리**(데이터를 분석에 적합한 형태로 정리하기)    \n",
+        "- **시각화**(그래픽으로 표현하여 패턴이나 트렌드 파악하기)     \n",
+        "- **인사이트 도출**(시각화된 데이터나 분석 결과를 통해 유용한 정보나 지식을 도출!  \n",
+        "*인사이트 도출은 의사결정에 중요한 역할을 한다*  \n",
+        "- 데이터 모델링(ML)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 데이터 분석의 아래와 같은 전 과정을 이해하도록 하자!  \n",
+        "\n",
+        "데이터 추출:DB 또는 크롤링으로 다양한 소스에서 데이터를 수집  \n",
+        "-> 데이터 전처리: 판다스 라이브러리를 통해 정리 및 변환된 데이터를 다룸  \n",
+        "-> 데이터 시각화: ploty 또는 matplotlib을 통해 이해하기 쉽도록 시각적 표현  \n",
+        "-> 인사이트 도출: EDA를 통해 유용한 정보를 도출  \n",
+        "-> 데이터 모델링: 예측, 분류 등을 위한 데이터 사용(ML)\n",
+        "\n",
+        "*plotly는 최근 시각화를 가장 쉽고 파워풀하게 구현해주는 라이브러리이다(내가 기존에 알던 시각화 라이브러리는 matplotlib)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 내가 자주 쓰는 파이썬 단축키를 정리해보자\n",
+        "\n",
+        "- Shift + Enter: 현재 셀을 실행하고 다음 셀로 이동  \n",
+        "- Ctrl + Enter: 현재 셀을 실행하고 현재 셀에 머문다(위와 차이)  \n",
+        "- Esc 눌러서 명령모드 진입 후 M 누르기: 마크다운 셀로 바꿔줌(블로그에 유용)  \n",
+        "- Esc 눌러서 명령모드 진입 후 Y 누르기: 코드 셀로 바꿔줌\n",
+        "- Ctrl + /: 주석처리(필기할 때 정말 유용)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "source": [
+        "### 특정 함수 또는 클래스만 import 할 때 \n",
+        "\n",
+        "from datetime import datetime  \n",
+        "이런 식으로 쓴다.  \n",
+        "이렇게 특정 함수만 불러왔을 때에는 datetime.now() 이렇게 사용한다.  \n",
+        "즉, datetime.datetime.now() 이렇게 쓰지 않아도 된다.  \n",
+        "\n",
+        "from pandas import DataFrame을 했다면  \n",
+        "pandas.DataFrame() 이렇게 쓰지 않고 DataFrame()만 써야한다(아니면 오류)\n",
+        "\n",
+        "*이 경우 pandas라는 이름은 아예 존재하지 않는 것이다!*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Tabular Data란 무엇인가?\n",
+        "\n",
+        "Tabular Data(테이블형 데이터)란 행과 열로 구조화된 데이터이다.  \n",
+        "즉, 엑셀, csv 등이다!  \n",
+        "\n",
+        "Tabular에서 각 행은 하나의 관측치이며, 각 열은 하나의 변수(속서)을 의미한는 데이터 구조이다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Row(행): 테이블형 데이터에서 가로 방향의 데이터 '집합'이다.  \n",
+        "- Column(열): 테이블에서 세로 방향의 데이터 '집합'이다. 하나의 열은 특정 송성 또는 변수이다.   \n",
+        "- Value(값): 행과 열이 교차하는 지점에 위치하는 '개별' 데이터이다.  \n",
+        "- Index(인덱스): 행을 구별하는 데에 사용되는 고유한 식별자이다.(즉, 행을 구별하는 식별자는 인덱스이고, 열을 구별하는 식별자는 Column Name이다)  \n",
+        "*칼럼명으로 특정 열을 식별해서 접근할 수 있기 때문이다!*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# Tabular Data와 관련된 속성들을 살펴보자\n",
+        "\n",
+        "df.shape # (행,열)의 수를 표시한다.  \n",
+        "df.columns # 열의 이름을 나열한다. Index([ ])에 담아서!  \n",
+        "df.values # Tabular Data를 arrary(배열)로 반환한다. (arrary는 Numpy에서 배웠다!)  \n",
+        "df.index # RangeIndex (start = , stop= , step= )을 반환한다. \n",
+        "\n",
+        "# 주의할 점! 함수/메서드가 아니라 ''속성''이다. ()가 없기 때문에 속성!\n",
+        "\n",
+        "괄호가 없으면 메서드가 아니라 속성이다.\n",
+        "속성은 객체의 ‘상태’를,\n",
+        "메서드는 객체의 ‘행동’을 나타낸다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**메타코드 ALL LLM 부트캠프 5기 1주차 필기내용입니다**"
+      ]
+    }
+  ],
   "metadata": {
     "colab": {
       "provenance": []
