--- a/blog/[20260119]_[TIL Data Analysis_로드맵]_[python]_[파이썬복습.jpg]_[python]_[] copy.ipynb
+++ b/blog/[20260119]_[TIL Data Analysis_로드맵]_[python]_[파이썬복습.jpg]_[python]_[] copy.ipynb
@@ -72,6 +72,7 @@
         "\n",
         "Tabular Data(테이블형 데이터)란 행과 열로 구조화된 데이터이다.  \n",
         "즉, 엑셀, csv 등이다!  \n",
+        "*csv 파일이란? comma seperated value 줄여서 csv이다.(콤마로 파일이 구분되어 있다)*\n",
         "\n",
         "Tabular에서 각 행은 하나의 관측치이며, 각 열은 하나의 변수(속서)을 의미한는 데이터 구조이다."
       ]
@@ -80,8 +81,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Row(행): 테이블형 데이터에서 가로 방향의 데이터 '집합'이다.  \n",
-        "- Column(열): 테이블에서 세로 방향의 데이터 '집합'이다. 하나의 열은 특정 송성 또는 변수이다.   \n",
+        "- Row(행): 테이블형 데이터에서 가로 방향의 데이터 '집합'이다.(하나의 관측치를 관찰할 때마다 하나의 row 즉, 가로가 쭉쭉 쌓인다)  \n",
+        "- Column(열): 테이블에서 세로 방향의 데이터 '집합'이다. 하나의 열은 특정 송성 또는 변수이다(하나의 관촬되는 값들이 가지는 속성을 구분한 것이다)  \n",
         "- Value(값): 행과 열이 교차하는 지점에 위치하는 '개별' 데이터이다.  \n",
         "- Index(인덱스): 행을 구별하는 데에 사용되는 고유한 식별자이다.(즉, 행을 구별하는 식별자는 인덱스이고, 열을 구별하는 식별자는 Column Name이다)  \n",
         "*칼럼명으로 특정 열을 식별해서 접근할 수 있기 때문이다!*"
@@ -116,7 +117,72 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "3-02부터 다시 시작하자."
+        "### 데이터프레임(DataFrame)\n",
+        "\n",
+        "데이터프레임은 행(row)과 열(column)로 이루어진 2차원 표(table) 형태의 데이터 구조이다.  \n",
+        "- 판다스에서는 데이터프레임 객체로 다룬다!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 딕셔너리 자료형을 데이터 프레임으로 바꾸기\n",
+        "\n",
+        "df = pd.DataFrame(dict) # 이 경우 딕셔너리의 key가 column name이 되고, 각 key에 해당하는 vale가 데이터프레임 테이블의 각각의 value가 된다(value가 list일 때 쭉쭉 들어간다! 딕셔너리의 value에 리스트가 들어갈 수 있으니까)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# 데이터를 처음 받았을 때, 데이터프레임을 살펴보는 함수들\n",
+        "\n",
+        "head()\n",
+        "tail()\n",
+        "info()\n",
+        "describe() # '숫자형'(numeric) 열의 통계치를 요약해준다. count, mean, sta, 사분위수, 최대 최소!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "source": [
+        "#### 참고로, seaborn을 기억해보자.  \n",
+        "\n",
+        " Seaborn은 파이썬에서 통계 기반 시각화를 아주 쉽게 만들어 주는 라이브러리이다.\n",
+        "\n",
+        " - seaborn에서는 데이터셋을 제공한다.  \n",
+        "-  sns.load_dataset('셋이름') - Seaborn에서 제공하는 “내장 예제 데이터셋을 불러오는 함수”다.\n",
+        "\n",
+        " 여기에 내가 가져오고 싶은 데이터를 가져오면 seaborn이 학습용으로 제공한 데이터를 쉽게 가져올 수 있다.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "df.index # 인덱스가 0부터 150까지 하나씩 올라가면서 있다! 라고 요약\n",
+        "\n",
+        "# 왜 stop이 150인가? 슬라이싱 규칙을 생각해보자!\n",
+        "# 즉, stop = 150 이라는 것은 '150 직전까지 있다'라는 뜻이다.\n",
+        "# 즉, 실제 인덱스 값은 0 ~ 149이고 개수는 150이다. 그래서 stop = 150"
       ]
     },
     {
