--- a/blog/[20260121]_[자전거수요예측_kaggle]_[kaggle]_[.jpg]_[캐글 데이터 분석 연습]_[].ipynb
+++ b/blog/[20260121]_[자전거수요예측_kaggle]_[kaggle]_[.jpg]_[캐글 데이터 분석 연습]_[].ipynb
@@ -1,6 +1,231 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 캐글 데이터 분석 실습  \n",
+    "#### 런던 자전거 수요 예측 \n",
+    "\n",
+    "*이 데이터 실습은 DIP 대구 빅데이터활용센터의 유튜브 영상 '캐글로 시작하는 데이터 분석'을 참고하였습니다. 데이터 분석의 설명 후 코드 전체를 첨부하였습니다.*\n",
+    "\n",
+    "# London Bike Sharing 수요 예측 데이터 분석 (Kaggle)\n",
+    "\n",
+    "이번 글에서는 Kaggle의 **London Bike Sharing Dataset**을 활용하여  \n",
+    "시간대별 자전거 대여 수요(`cnt`)를 예측하는 회귀 문제를 분석한 과정을 정리한다.\n",
+    "\n",
+    "본 분석은 단순히 모델 하나를 학습하는 데서 끝나는 것이 아니라,\n",
+    "\n",
+    "- 탐색적 데이터 분석(EDA)\n",
+    "- 데이터 전처리 및 피처 엔지니어링\n",
+    "- 이상치 처리\n",
+    "- 머신러닝 · 딥러닝 모델링\n",
+    "- 성능 비교 및 시각화\n",
+    "\n",
+    "까지 **데이터 분석의 전체 흐름을 실습 형태로 경험하는 것**을 목표로 진행했다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. 데이터 로드 및 구조 확인\n",
+    "\n",
+    "사용한 데이터는 Kaggle의 `london_merged.csv`로,  \n",
+    "`timestamp` 컬럼을 날짜형(datetime)으로 변환하여 불러왔다.\n",
+    "\n",
+    "- 데이터 크기: **(17,414, 10)**\n",
+    "- 주요 변수 구성\n",
+    "  - `timestamp` : 시간 정보\n",
+    "  - `cnt` : 자전거 대여 수요 (타깃 변수)\n",
+    "  - `t1`, `t2` : 실제 온도 / 체감 온도\n",
+    "  - `hum` : 습도\n",
+    "  - `wind_speed` : 풍속\n",
+    "  - `weather_code` : 날씨 범주\n",
+    "  - `is_holiday`, `is_weekend`\n",
+    "  - `season`\n",
+    "\n",
+    "결측치는 `isna()`와 `missingno` 시각화를 통해 확인했으며,  \n",
+    "대부분의 컬럼에서 **결측치가 거의 없는 비교적 정제된 데이터**임을 확인했다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. 시간 변수 확장 (Feature Engineering)\n",
+    "\n",
+    "시계열 데이터 분석에서 핵심은  \n",
+    "시간 정보를 모델이 학습 가능한 형태로 변환하는 것이다.\n",
+    "\n",
+    "이를 위해 `timestamp` 컬럼에서 다음과 같은 파생 변수를 생성했다.\n",
+    "\n",
+    "- `year`\n",
+    "- `month`\n",
+    "- `dayofweek`\n",
+    "- `hour`\n",
+    "\n",
+    "`.dt` 접근자를 활용해 연·월·요일·시간 정보를 분리했으며,  \n",
+    "이 과정을 통해 데이터는 **10개 컬럼에서 14개 컬럼으로 확장**되었다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. 탐색적 데이터 분석 (EDA)\n",
+    "\n",
+    "모델링에 앞서 자전거 수요(`cnt`)가  \n",
+    "시간에 따라 어떤 패턴을 가지는지 시각적으로 확인했다.\n",
+    "\n",
+    "### 3.1 연도 및 월별 수요 분포\n",
+    "\n",
+    "- `year` vs `cnt`\n",
+    "- `month` vs `cnt`\n",
+    "\n",
+    "연도 및 계절 변화에 따라 수요 분포가 달라지는 경향을 확인할 수 있었다.\n",
+    "\n",
+    "### 3.2 요일 및 시간대별 수요 패턴\n",
+    "\n",
+    "- `dayofweek` vs `cnt`\n",
+    "  - 전반적으로 **주말보다 평일 수요가 더 높은 경향**\n",
+    "- `hour` vs `cnt`\n",
+    "  - **출퇴근 시간대에 수요가 뚜렷하게 증가**\n",
+    "\n",
+    "이는 자전거 대여가  \n",
+    "레저 목적보다는 **일상적인 이동 수단**으로 활용되고 있음을 보여준다.\n",
+    "\n",
+    "### 3.3 반복 시각화를 위한 함수화\n",
+    "\n",
+    "시간·요일·월 등 다양한 변수에 대해  \n",
+    "평균 수요를 빠르게 비교하기 위해 시각화 함수를 정의해 사용했다.  \n",
+    "이를 통해 EDA 과정의 반복 작업을 줄이고 패턴 분석에 집중할 수 있었다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. 이상치 처리: 시간대별 분포 기준\n",
+    "\n",
+    "이번 분석에서는 전체 분포 기준이 아닌,  \n",
+    "**시간대(hour)별 조건부 분포를 기준으로 이상치를 제거**했다.\n",
+    "\n",
+    "시간대마다 수요의 평균과 분산이 다르다는 점을 고려한 접근이다.\n",
+    "\n",
+    "### 이상치 기준\n",
+    "\n",
+    "- 각 `hour` 그룹에서\n",
+    "- `cnt`가 `평균 ± 3 × 표준편차` 범위를 벗어나는 경우 이상치로 판단\n",
+    "\n",
+    "### 처리 결과\n",
+    "\n",
+    "- 이상치 제거 전: **(17,414, 14)**\n",
+    "- 이상치 제거 후: **(17,265, 14)**\n",
+    "\n",
+    "시간대 특성을 반영한 이상치 제거를 통해  \n",
+    "모델 학습 시 극단값의 영향을 줄일 수 있었다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. 범주형 변수 처리 및 더미 인코딩\n",
+    "\n",
+    "머신러닝과 딥러닝 모델 학습을 위해  \n",
+    "범주형 변수를 명시적으로 처리했다.\n",
+    "\n",
+    "- `weather_code`, `season` → `category` 타입 변환\n",
+    "- `pd.get_dummies()`를 활용해 원-핫 인코딩 적용\n",
+    "- `year`, `month`, `hour` 역시 범주형으로 처리\n",
+    "\n",
+    "- 타깃 변수: `cnt`\n",
+    "- 입력 변수: `timestamp`, `cnt`를 제외한 나머지 컬럼\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6. 시계열 데이터 분리 (Train / Test)\n",
+    "\n",
+    "훈련 데이터와 테스트 데이터 분리는 `train_test_split`을 사용했으며,  \n",
+    "**shuffle=False** 옵션을 적용했다.\n",
+    "\n",
+    "### 적용 이유\n",
+    "\n",
+    "시계열 데이터에서 무작위 셔플을 적용하면  \n",
+    "미래 데이터가 학습 데이터에 포함되는  \n",
+    "**데이터 누수(data leakage)**가 발생할 수 있기 때문이다.\n",
+    "\n",
+    "### 분리 결과\n",
+    "\n",
+    "- `x_train`: **(12,085, 57)**\n",
+    "- `x_test`: **(5,180, 57)**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 7. 딥러닝 모델 (DNN)\n",
+    "\n",
+    "### 모델 구조\n",
+    "\n",
+    "- 입력 차원: 57\n",
+    "- Dense Layer 구성  \n",
+    "  - 160 → 60 → 20 → 1\n",
+    "- 활성화 함수  \n",
+    "  - Hidden layer: ReLU  \n",
+    "  - Output layer: Linear\n",
+    "- Loss Function: MAE\n",
+    "- Optimizer: Adam\n",
+    "- EarlyStopping 적용\n",
+    "\n",
+    "학습 과정에서 `loss`와 `val_loss`를 시각화하여  \n",
+    "모델의 수렴 상태와 과적합 여부를 함께 확인했다.\n",
+    "\n",
+    "### 성능 결과\n",
+    "\n",
+    "- **DNN RMSE ≈ 258.42**\n",
+    "\n",
+    "이번 실습에서는 딥러닝 모델이 가장 우수한 성능을 보였다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 8. 머신러닝 모델 비교\n",
+    "\n",
+    "딥러닝 모델과의 비교를 위해  \n",
+    "대표적인 트리 기반 회귀 모델을 함께 학습했다.\n",
+    "\n",
+    "### Random Forest Regressor\n",
+    "\n",
+    "- **RMSE ≈ 303.64**\n",
+    "\n",
+    "### XGBoost Regressor\n",
+    "\n",
+    "- **RMSE ≈ 320.14**\n",
+    "- `random_state` 오타로 인해  \n",
+    "  파라미터가 적용되지 않는 경고 발생  \n",
+    "- 재현성 관리의 중요성을 확인하는 계기가 되었다.\n",
+    "\n",
+    "### LightGBM Regressor\n",
+    "\n",
+    "- **RMSE ≈ 323.27**\n",
+    "- 동일하게 `random_state` 관련 경고 발생\n",
+    "\n",
+    "### 모델 성능 요약\n",
+    "\n",
+    "DNN (258) < RandomForest (303) < XGBoost (320) < LightGBM (323\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 9. 예측 결과 분포 비교\n",
+    "\n",
+    "RMSE 수치 비교에 그치지 않고,  \n",
+    "실제값과 각 모델의 예측값 분포를 KDE plot으로 함께 시각화했다.\n",
+    "\n",
+    "- 비교 대상\n",
+    "  - 실제값: `cnt`\n",
+    "  - 예측값: `dnn`, `rf`, `xgb`, `lgb`\n",
+    "\n",
+    "이를 통해 특정 구간에서의  \n",
+    "과소·과대 예측 여부를 분포 관점에서 확인할 수 있었다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 10. 정리 및 향후 개선 방향\n",
+    "\n",
+    "이번 분석을 통해 다음과 같은 점을 확인할 수 있었다.\n",
+    "\n",
+    "- EDA부터 모델 비교까지 **데이터 분석 전 과정을 하나의 흐름으로 경험**\n",
+    "- 시계열 데이터에서  \n",
+    "  전처리, 피처 설계, 데이터 분리 방식의 중요성 체감\n",
+    "- 딥러닝과 머신러닝 모델의 특성 차이를 실제 성능으로 비교\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
